### Cleaning (HEAD -> main)
>Thu, 18 Mar 2021 12:57:59 +0100

>Author: Jean-Christophe Malapert (jean-christophe.malapert@cnes.fr)

>Commiter: Jean-Christophe Malapert (jean-christophe.malapert@cnes.fr)




### Rename the enumerate LISA to MBH
>Thu, 18 Mar 2021 12:54:15 +0100

>Author: Jean-Christophe Malapert (jean-christophe.malapert@cnes.fr)

>Commiter: Jean-Christophe Malapert (jean-christophe.malapert@cnes.fr)




### fix galactic coordinate examples
>Wed, 17 Mar 2021 12:33:06 -0500

>Author: Tyson Littenberg (tyson.littenberg@ligo.org)

>Commiter: Tyson Littenberg (tyson.littenberg@ligo.org)




### Fix typo
>Wed, 17 Mar 2021 16:27:14 +0100

>Author: Jean-Christophe Malapert (jean-christophe.malapert@cnes.fr)

>Commiter: Jean-Christophe Malapert (jean-christophe.malapert@cnes.fr)




### Add tasks to release the pypi package on both test and prod plateform
>Wed, 17 Mar 2021 16:17:19 +0100

>Author: Jean-Christophe Malapert (jean-christophe.malapert@cnes.fr)

>Commiter: Jean-Christophe Malapert (jean-christophe.malapert@cnes.fr)




### Add cache system on the UCB plugin to reduce the IO.
>Wed, 17 Mar 2021 16:15:32 +0100

>Author: Jean-Christophe Malapert (jean-christophe.malapert@cnes.fr)

>Commiter: Jean-Christophe Malapert (jean-christophe.malapert@cnes.fr)




### update to webpage? (upstream/main)
>Tue, 16 Mar 2021 16:04:11 -0500

>Author: Tyson Littenberg (tyson.littenberg@ligo.org)

>Commiter: Tyson Littenberg (tyson.littenberg@ligo.org)




### trying workflow after clean clone
>Tue, 16 Mar 2021 13:35:54 -0500

>Author: Tyson Littenberg (tyson.littenberg@ligo.org)

>Commiter: Tyson Littenberg (tyson.littenberg@ligo.org)




### Add tutorial/data in .gitignore
>Tue, 16 Mar 2021 16:48:37 +0100

>Author: Jean-Christophe Malapert (jean-christophe.malapert@cnes.fr)

>Commiter: Jean-Christophe Malapert (jean-christophe.malapert@cnes.fr)




### trying to fix webpage
>Tue, 16 Mar 2021 10:22:51 -0500

>Author: Tyson Littenberg (tyson.littenberg@ligo.org)
