@@ -1,4 +1,14 @@
-### Cleaning (HEAD -> main)
+### Add extra_directories option to load catalogs Add tests for plugin creation Add documentation (HEAD -> main)
+>Sun, 21 Mar 2021 08:13:02 +0100
+
+>Author: Jean-Christophe Malapert (jean-christophe.malapert@cnes.fr)
+
+>Commiter: Jean-Christophe Malapert (jean-christophe.malapert@cnes.fr)
+
+
+
+
+### Cleaning (origin/main, origin/HEAD)
 >Thu, 18 Mar 2021 12:57:59 +0100
 
 >Author: Jean-Christophe Malapert (jean-christophe.malapert@cnes.fr)
@@ -58,7 +68,7 @@
 
 
 
-### update to webpage? (upstream/main)
+### update to webpage?
 >Tue, 16 Mar 2021 16:04:11 -0500
 
 >Author: Tyson Littenberg (tyson.littenberg@ligo.org)
